--- a/requirements.txt
+++ b/requirements.txt
@@ -54,3 +54,9 @@ zipp==3.15.0
 
 tqdm~=4.65.0
 setuptools~=60.2.0
+azureml~=0.2.7
+tenseal~=0.3.14
+matplotlib~=3.7.1
+pandas~=2.0.1
+
+azure-core==1.26.4
