--- a/dppix/config/config_fed_server.json
+++ b/dppix/config/config_fed_server.json
@@ -52,6 +52,15 @@
       "id": "json_generator",
       "path": "nvflare.app_common.widgets.validation_json_generator.ValidationJsonGenerator",
       "args": {}
+    },
+    {
+        "id": "tb_analytics_receiver",
+        "name": "TBAnalyticsReceiver",
+        "args": {
+            "events": [
+                "fed.analytix_log_stats"
+            ]
+        }
     }
   ],
   "workflows": [
@@ -59,7 +68,7 @@
       "id": "scatter_and_gather",
       "path": "scatter_and_gather_gan.ScatterAndGatherGAN",
       "args": {
-        "min_clients": 3,
+        "min_clients": 2,
         "num_rounds": 20,
         "start_round": 0,
         "wait_time_after_min_received": 10,
