--- a/dppix/config/config_fed_client.json
+++ b/dppix/config/config_fed_client.json
@@ -8,7 +8,9 @@
         "path": "pix_trainer.PixTrainer",
         "args": {
           "lr": 0.0002,
-          "epochs": 10
+          "epochs": 1,
+          "analytic_sender_id": "analytic_sender",
+          "data_path": "~/localfiles/data"
         }
       }
     }
@@ -32,5 +34,20 @@
   "task_data_filters": [
   ],
   "components": [
+    {
+        "id": "analytic_sender",
+        "name": "AnalyticsSender",
+        "args": {}
+    },
+    {
+        "id": "event_to_fed",
+        "name": "ConvertToFedEvent",
+        "args": {
+            "events_to_convert": [
+                "analytix_log_stats"
+            ],
+            "fed_event_prefix": "fed."
+        }
+    }
   ]
 }
