--- a/requirements.txt
+++ b/requirements.txt
@@ -1,61 +1,6 @@
-albumentations==1.3.0
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==3.1.0
-click==8.1.3
-cryptography==40.0.1
-docker==6.0.1
-filelock==3.11.0
-Flask==2.1.2
-Flask-JWT-Extended==4.4.3
-Flask-SQLAlchemy==2.5.1
-grpcio==1.51.1
-gunicorn==20.1.0
-idna==3.4
-imageio==2.27.0
-importlib-metadata==6.3.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-joblib==1.2.0
-lazy_loader==0.2
-MarkupSafe==2.1.2
-mpmath==1.3.0
-msgpack==1.0.5
-networkx==3.1
-numpy==1.24.2
 nvflare==2.3.0
-opencv-python-headless==4.7.0.72
-packaging==23.1
+albumentations==1.3.1
 Pillow==9.5.0
-protobuf==3.20.3
-psutil==5.9.4
-pycparser==2.21
-PyJWT==2.6.0
-PyWavelets==1.4.1
-PyYAML==6.0
-qudida==0.0.4
-requests==2.28.2
-scikit-image==0.20.0
-scikit-learn==1.2.2
-scipy==1.9.1
-six==1.16.0
-SQLAlchemy==1.4.31
-sympy==1.11.1
-threadpoolctl==3.1.0
-tifffile==2023.4.12
-torch==2.0.0
-torchvision==0.15.1
-typing_extensions==4.5.0
-urllib3==1.26.15
-websocket-client==1.5.1
-websockets==11.0.1
-Werkzeug==2.2.3
-zipp==3.15.0
-
-tqdm~=4.65.0
-setuptools~=60.2.0
-azureml~=0.2.7
-matplotlib~=3.7.1
-pandas~=2.0.1
-
-azure-core==1.26.4
+tensorflow==2.12.0
+torchvision==0.15.2
+torch==2.0.1
